errors.txt
   Compiling atomas v0.1.0 (C:\Obsidian\Rust\atomas)
error[E0412]: cannot find type `Data` in this scope
 --> src\parser.rs:9:64
  |
9 | pub fn detect_game_state<'a>(input_image_path: &str, data: &'a Data) -> GameState<'a> {
  |                                                                ^^^^ not found in this scope
  |
help: consider importing one of these structs
  |
1 + use crate::Data;
  |
1 + use atomas_core::Data;
  |

warning: unused imports: `AdjMatrix`, `CircularList`, `ElementType`, `Element`, and `SpecialAtom`
 --> src\main.rs:2:22
  |
2 |     elements::{Data, Element, ElementType, SpecialAtom},
  |                      ^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^
3 |     ring::{CircularList, AdjMatrix},
  |            ^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `ElementType`
 --> src\parser.rs:2:25
  |
2 |     elements::{Element, ElementType},
  |                         ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `atomas` (bin "atomas") generated 2 warnings
error: could not compile `atomas` (bin "atomas") due to 1 previous error; 2 warnings emitted
